// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not replace long keys with a hash 1`] = `
<Text
  longKeyExampleToKeep="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
>
  Example text
</Text>
`;

exports[`replace all long keys with a hash 1`] = `
<Text
  longKeyExample="fddca11d6fb4a02ec667a5e7fbd175b3"
  longKeyExampleTwo="fddca11d6fb4a02ec667a5e7fbd175b3"
>
  Example text
</Text>
`;
